Fix : Sponsor Page & Loading Overflow

--- a/src/pages/About/styles.module.scss
+++ b/src/pages/About/styles.module.scss
@@ -39,7 +39,7 @@ p {
   }
   .right {
     img {
-      width: 17rem;
+      width: 15rem;
     }
   }
 }
@@ -63,7 +63,7 @@ p {
     text-align: center;
     color: rgba(255, 255, 255, 0.6);
   }
-}
+
 
   .photos {
     display: grid;
